singularity support for HPC

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,2 +1,3 @@
-process.container	=	'clemgoub/typeref:latest'
-docker.enabled 		=	true
+singularity.enabled = true
+process.container = '/project/def-bourqueg/cgoubert/pr-TypeREF/img-singularity/clemgoub-typeref-latest.img'
+singularity.autoMounts = true
